Entrega 02 Dataframe Pablo González Ortega